--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<druid.version>1.1.10</druid.version>
 		<lombok.version>1.18.2</lombok.version>
 		<swagger.version>2.9.2</swagger.version>
+		<jackson.version>2.8.11.2</jackson.version>
 	</properties>
 
 	<dependencyManagement>
@@ -96,7 +97,25 @@
 				<scope>test</scope>
 				<version>${spring.boot.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
